--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,7 +14,7 @@
 // $light: #;
 // $dark: #;
 
-:root body .wrapper.theme-default {
+:root body.theme-default {
   $primary: #00ff00;
   $accent: #000;
 
