update based scss

--- a/src/styles/bootstrap/_override.scss
+++ b/src/styles/bootstrap/_override.scss
@@ -1,7 +1,3 @@
-body {
-  font-family: $font-family-sans-serif;
-}
-
 * {
   outline: none !important;
 }
@@ -170,4 +166,9 @@ fieldset[disabled] .btn {
 .text-break {
   word-break: break-word;
   overflow-wrap: break-word;
+}
+
+// prevent tooltip flickering (flashing) on hover
+.tooltip {
+  pointer-events: none;
 }
