--- a/src/styles/theme/mixins/_count-badge.scss
+++ b/src/styles/theme/mixins/_count-badge.scss
@@ -1,9 +1,7 @@
-@use '../../bootstrap/init' as bs;
-
 @mixin count-badge($color, $bg-color, $min-width: initial) {
   min-width: $min-width;
   padding: 0.1rem 0.5rem;
-  font-family: bs.$font-family-monospace;
+  font-family: var(--font-family-monospace);
   font-size: 12px;
   font-weight: 500;
   color: $color;
