fix scss syntax

--- a/src/styles/theme/_apply-colors.scss
+++ b/src/styles/theme/_apply-colors.scss
@@ -570,7 +570,7 @@ body.editing-sidebar {
 .page-comment-meta .page-comment-revision svg {
   fill: $color-link;
 
-  &:hover() {
+  &:hover {
     fill: $color-link-hover;
   }
 }
